mqtt_app_src/raw_data.txt~
connect
0x10 0x55 
0x0 0x4 0x4d 0x51 0x54 0x54 0x4 0xc6 0x0 0x0 
0x0 0x6 0x37 0x36 0x39 0x32 0x34 0x33 0x0 0x9 0x57 0x69 0x6c 0x6c 0x54 0x6f 0x70 0x69 0x63 0x0 0x11 0x77 0x69 0x6c 0x6c 0x20 0x6d 0x65 0x73 0x73 0x61 0x67 0x65 0x2d 0x78 0x78 0x78 0x78 0x0 0x5 0x33 0x39 0x34 0x38 0x34 0x0 0x1c 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 
Success to connect to the server, flags(0), code(0).
exit
bye...
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ make
gcc   -I./include -I./mqtt -o mqttc *.c  src/*.c
mqtt.c: In function ‘MqttSample_SendPkt’:
mqtt.c:126:5: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
  tmp=&iov[i];
     ^
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ ./mqttc
Commands: 
  connect         Establish the connection.
  ping            Send ping packet.
  publish         Send data points.
  subscribe       Subscribe the data streams.
  unsubscribe     Unsubscribe the data streams.
  disconnect      Close the connection.
  cmdret          Sed the command returen information.
  exit            Exit the sample.
  help            Print the usage of the commands.

connect
*****
0x10 0x55 *****
*****
0x0 0x4 0x4d 0x51 0x54 0x54 0x4 0xc6 0x0 0x0 *****
*****
0x0 0x6 0x37 0x36 0x39 0x32 0x34 0x33 0x0 0x9 0x57 0x69 0x6c 0x6c 0x54 0x6f 0x70 0x69 0x63 0x0 0x11 0x77 0x69 0x6c 0x6c 0x20 0x6d 0x65 0x73 0x73 0x61 0x67 0x65 0x2d 0x78 0x78 0x78 0x78 0x0 0x5 0x33 0x39 0x34 0x38 0x34 0x0 0x1c 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d *****
Success to connect to the server, flags(0), code(0).
exit
bye...
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ make
gcc   -I./include -I./mqtt -o mqttc *.c  src/*.c
mqtt.c: In function ‘MqttSample_SendPkt’:
mqtt.c:126:5: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
  tmp=&iov[i];
     ^
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ ./mqttc
Commands: 
  connect         Establish the connection.
  ping            Send ping packet.
  publish         Send data points.
  subscribe       Subscribe the data streams.
  unsubscribe     Unsubscribe the data streams.
  disconnect      Close the connection.
  cmdret          Sed the command returen information.
  exit            Exit the sample.
  help            Print the usage of the commands.

connect

*****
0x10 0x55 
*****

*****
0x0 0x4 0x4d 0x51 0x54 0x54 0x4 0xc6 0x0 0x0 
*****

*****
0x0 0x6 0x37 0x36 0x39 0x32 0x34 0x33 0x0 0x9 0x57 0x69 0x6c 0x6c 0x54 0x6f 0x70 0x69 0x63 0x0 0x11 0x77 0x69 0x6c 0x6c 0x20 0x6d 0x65 0x73 0x73 0x61 0x67 0x65 0x2d 0x78 0x78 0x78 0x78 0x0 0x5 0x33 0x39 0x34 0x38 0x34 0x0 0x1c 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 
*****
Success to connect to the server, flags(0), code(0).
exit
bye...
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ make
gcc   -I./include -I./mqtt -o mqttc *.c  src/*.c
mqtt.c: In function ‘MqttSample_RecvPkt’:
mqtt.c:115:38: warning: dereferencing ‘void *’ pointer [enabled by default]
   printf("0x%x ",(unsigned char *)buf[i]);
                                      ^
mqtt.c:115:3: error: invalid use of void expression
   printf("0x%x ",(unsigned char *)buf[i]);
   ^
mqtt.c: In function ‘MqttSample_SendPkt’:
mqtt.c:133:5: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
  tmp=&iov[i];
     ^
make: *** [all] Error 1
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ make
gcc   -I./include -I./mqtt -o mqttc *.c  src/*.c
mqtt.c: In function ‘MqttSample_SendPkt’:
mqtt.c:133:5: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
  tmp=&iov[i];
     ^
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ ./mqttc
Commands: 
  connect         Establish the connection.
  ping            Send ping packet.
  publish         Send data points.
  subscribe       Subscribe the data streams.
  unsubscribe     Unsubscribe the data streams.
  disconnect      Close the connection.
  cmdret          Sed the command returen information.
  exit            Exit the sample.
  help            Print the usage of the commands.

connect

*****
0x10 0x55 
*****

*****
0x0 0x4 0x4d 0x51 0x54 0x54 0x4 0xc6 0x0 0x0 
*****

*****
0x0 0x6 0x37 0x36 0x39 0x32 0x34 0x33 0x0 0x9 0x57 0x69 0x6c 0x6c 0x54 0x6f 0x70 0x69 0x63 0x0 0x11 0x77 0x69 0x6c 0x6c 0x20 0x6d 0x65 0x73 0x73 0x61 0x67 0x65 0x2d 0x78 0x78 0x78 0x78 0x0 0x5 0x33 0x39 0x34 0x38 0x34 0x0 0x1c 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 
*****

-----
0x20 0x2 0x0 0x0 
-----
Success to connect to the server, flags(0), code(0).

-----

-----
ping

*****
0xc0 0x0 
*****

-----
0xd0 0x0 
-----
Recv the ping response.

-----

-----
subscribe

*****
0x82 0x38 
*****

*****
0x0 0x1 0x0 0x33 0x33 0x39 0x34 0x38 0x34 0x2f 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 0x2f 0x37 0x36 0x39 0x32 0x34 0x33 0x2f 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x1 
*****

-----
0x90 0x3 0x0 0x1 0x1 
-----
Recv the subscribe ack, packet id is 1, return code count is 1:.
   code0=01

-----

-----
ping

*****
0xc0 0x0 
*****

-----
0xd0 0x0 
-----
Recv the ping response.

-----

-----
ping

*****
0xc0 0x0 
*****

-----
0xd0 0x0 
-----
Recv the ping response.

-----

-----
ping

*****
0xc0 0x0 
*****

-----
0xd0 0x0 
-----
Recv the ping response.

-----

-----

-----

-----
The connection is disconnected.
qexit
exit
bye...
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ make
gcc   -I./include -I./mqtt -o mqttc *.c  src/*.c
mqtt.c: In function ‘MqttSample_SendPkt’:
mqtt.c:133:5: warning: assignment discards ‘const’ qualifier from pointer target type [enabled by default]
  tmp=&iov[i];
     ^
zhazngjian_iot@zhazngjian:~/workspace/MQTT-master/mqtt_app$ ./mqttc
Commands: 
  connect         Establish the connection.
  ping            Send ping packet.
  publish         Send data points.
  subscribe       Subscribe the data streams.
  unsubscribe     Unsubscribe the data streams.
  disconnect      Close the connection.
  cmdret          Sed the command returen information.
  exit            Exit the sample.
  help            Print the usage of the commands.

connect

*****
0x10 0x55 
*****

*****
0x0 0x4 0x4d 0x51 0x54 0x54 0x4 0xc6 0x0 0x0 
*****

*****
0x0 0x6 0x37 0x36 0x39 0x32 0x34 0x33 0x0 0x9 0x57 0x69 0x6c 0x6c 0x54 0x6f 0x70 0x69 0x63 0x0 0x11 0x77 0x69 0x6c 0x6c 0x20 0x6d 0x65 0x73 0x73 0x61 0x67 0x65 0x2d 0x78 0x78 0x78 0x78 0x0 0x5 0x33 0x39 0x34 0x38 0x34 0x0 0x1c 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 
*****

-----
0x20 0x2 0x0 0x0 
-----
Success to connect to the server, flags(0), code(0).

-----

-----
publish

*****
0x34 0x4b 
*****

*****#/sys/passdata, 多点发送的方式
0x0 0xd 0x24 0x53 0x59 0x53 0x2f 0x73 0x61 0x76 0x65 0x64 0x61 0x74 0x61 0x0 0x1 
*****

***** type =2 "{"
0x2 0x7b 
*****

*****
"      d    a   _   t     e   s     t    _    a    "    :    {
0x22 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x22 0x3a 0x7b 
*****

*****time 
"   1       9     7     0
0x22 0x31 0x39 0x37 0x30 0x2d 0x30 0x31 0x2d 0x30 0x34 0x20 0x30 0x37 0x3a 0x31 0x32 0x3a 0x32 0x32 0x2e 0x30 0x30 0x30 0x22 0x3a 0x7b {
*****

*****
"    s     u     b    v   a      l  u   e     "    :     2   3
0x22 0x73 0x75 0x62 0x76 0x61 0x6c 0x75 0x65 0x22 0x3a 0x32 0x33 0x7d }
*****

*****
0x7d  }
*****

*****
0x7d "
*****

-----
0x50 0x2 0x0 0x1 
-----
Recv the publish rec, packet id is 1.

*****
0x62 0x2 0x0 0x1 ，rel
*****

-----

-----

-----
0x70 0x2 0x0 0x1 
-----
Recv the publish comp, packet id is 1.

-----

-----

-----

-----
The connection is disconnected.

publish

*****
0x34 0x4b 
*****

*****
0x0 0xd 0x24 0x53 0x59 0x53 0x2f 0x73 0x61 0x76 0x65 0x64 0x61 0x74 0x61 0x0 0x1 
*****

*****
0x2 0x7b 
*****

*****
0x22 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x22 0x3a 0x7b 
*****

*****
0x22 0x31 0x39 0x37 0x30 0x2d 0x30 0x31 0x2d 0x30 0x34 0x20 0x31 0x31 0x3a 0x34 0x31 0x3a 0x34 0x34 0x2e 0x30 0x30 0x30 0x22 0x3a 0x7b 
*****

*****
0x22 0x73 0x75 0x62 0x76 0x61 0x6c 0x75 0x65 0x22 0x3a 0x32 0x33 0x7d 
*****

*****
0x7d 
*****

*****
0x7d 
*****

-----
0x50 0x2 0x0 0x1 
-----
Recv the publish rec, packet id is 1.

*****
0x62 0x2 0x0 0x1 
*****

-----

-----
接受到的订阅信息。
subscribe

*****
0x82 0x38 
*****

*****
0x0 0x1 0x0 0x33 0x33 0x39 0x34 0x38 0x34 0x2f 0x6e 0x43 0x56 0x4e 0x58 0x59 0x43 0x6f 0x58 0x36 0x38 0x49 0x48 0x47 0x34 0x44 0x67 0x70 0x79 0x4e 0x75 0x35 0x61 0x54 0x58 0x66 0x59 0x3d 0x2f 0x37 0x36 0x39 0x32 0x34 0x33 0x2f 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x1 
*****

-----
0x90 0x3 0x0 0x1 0x1 
-----
Recv the subscribe ack, packet id is 1, return code count is 1:.
   code0=01

-----

-----

-----
0x32 0x2c 0x0 0x10 0x37 0x36 0x39 0x32 0x34 0x33 0x2f 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x0 0x1 0xc4 0x0 0x0 0x0 0x0 0x10 0x74 0xa9 0x68 0x7b 0x22 0x73 0x75 0x62 0x76 0x61 0x6c 0x75 0x65 0x22 0x3a 0x32 0x33 0x7d 
-----
dup=0, qos=1, id=1
topic: 769243/da_test_a
payloadsize=24

*****
0x40 0x2 0x0 0x1 
*****

-----

-----

-----
0x32 0x2c 0x0 0x10 0x37 0x36 0x39 0x32 0x34 0x33 0x2f 0x64 0x61 0x5f 0x74 0x65 0x73 0x74 0x5f 0x61 0x0 0x2 0xc4 0x0 0x0 0x0 0x0 0x10 0x75 0x3 0x40 0x7b 0x22 0x73 0x75 0x62 0x76 0x61 0x6c 0x75 0x65 0x22 0x3a 0x32 0x33 0x7d 
-----
dup=0, qos=1, id=2
topic: 769243/da_test_a
payloadsize=24

*****
0x40 0x2 0x0 0x2 
*****

-----

-----



